# Vision

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  bug_note.md
src/: CMakeLists.txt  stats_line_num.py
src/UI/: CMakeLists.txt  GUI.cpp  GUI.h  polymorphic.h
src/apps/: CMakeLists.txt  application.cpp  application.h  vision-gui.cpp  vision.cpp
src/apps/precompute/: CMakeLists.txt  main.cpp  precompute.json
src/apps/vision-gui/: CMakeLists.txt  application.cpp  application.h  main.cpp
src/base/: CMakeLists.txt  bake.h  bake_util.cpp  bake_utils.cpp  bake_utlis.h  bxdf.cpp  bxdf.h  coloured.h  denoiser.h  device_data.cpp  device_data.h  distribution.h  encoded_object.cpp  encoded_object.h  film.cpp  film.h  filter.h  frame_buffer.cpp  frame_buffer.h  fresnel.h  gbuffer.cpp  gbuffer.h  geometry.cpp  geometry.h  image_pool.cpp  image_pool.h  importer.cpp  importer.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  lightsampler.cpp  lightsampler.h  material.cpp  material.h  medium.cpp  medium.h  (+34 more)
src/base/color/: cie.h  spd.cpp  spd.h  spectrum.cpp  spectrum.h
src/base/illumination/: ies.cpp  ies.h  light.cpp  light.h  lightsampler.cpp  lightsampler.h
src/base/mgr/: geometry.cpp  geometry.h  global.cpp  global.h  image_pool.cpp  image_pool.h  material_registry.cpp  material_registry.h  medium_registry.cpp  medium_registry.h  mesh_pool.cpp  mesh_pool.h  mesh_registry.cpp  mesh_registry.h  node_mgr.cpp  node_mgr.h  pipeline.cpp  pipeline.h  postprocessor.cpp  postprocessor.h  registries.cpp  registries.h  render_pipeline.cpp  render_pipeline.h  scene.cpp  scene.h  shader_data.cpp  shader_data.h
src/base/scattering/: bxdf.cpp  bxdf.h  bxdf_set.cpp  bxdf_set.h  fresnel.h  interaction.cpp  interaction.h  lobe.cpp  lobe.h  material.cpp  material.h  medium.cpp  medium.h  microfacet.cpp  microfacet.h  precomputed_table.h  precomputed_table.inl.h
src/base/sensor/: camera.cpp  camera.h  film.cpp  film.h  filter.cpp  filter.h  photosensory.cpp  photosensory.h  radiance_collector.cpp  radiance_collector.h  ray_generator.h  sensor.cpp  sensor.h  tonemapper.h
src/base/shader_graph/: shader_graph.cpp  shader_graph.h  shader_node.cpp  shader_node.h  slot_average_swizzle_1.inl.h  slot_average_swizzle_2.inl.h  slot_average_swizzle_3.inl.h  slot_average_swizzle_4.inl.h  slot_swizzle.py  slot_swizzle1.inl.h  slot_swizzle2.inl.h  slot_swizzle3.inl.h  slot_swizzle4.inl.h  slot_swizzle_1.inl.h  slot_swizzle_2.inl.h  slot_swizzle_3.inl.h  slot_swizzle_4.inl.h  tslot_swizzle_2.inl.h
src/core/: CMakeLists.txt  cli_parser.cpp  cli_parser.h  context.cpp  context.h  header.h  header.h~  image_pool.cpp  image_pool.h  json_util.h  medium_scatter_data.h  node_desc.cpp  node_desc.h  parameter_set.h  pipeline.cpp  pipeline.h  render_pipeline.cpp  render_pipeline.h  scene.cpp  scene.h  scene_desc.cpp  scene_desc.h  vs_header.h
src/description/: CMakeLists.txt  descriptions.cpp  descriptions.h  parameter_set.h
src/descriptions/: desc.cpp  desc.h  json_util.h  medium_scatter_data.h  metal_ior_data.h  node_desc.cpp  node_desc.h  parameter_set.h  scene_desc.cpp  scene_desc.h  shape.h
src/distributions/: CMakeLists.txt  alias_table.cpp  dichotomy.cpp
src/ext/: CMakeLists.txt
src/ext/ispc-v1.20.0-windows/: ispc.html
src/ext/usd/: CMakeLists.txt
src/ext/xatlas/: CMakeLists.txt
src/films/: CMakeLists.txt  rgb.cpp
src/filters/: CMakeLists.txt  box.cpp
src/hotfix/: CMakeLists.txt  build_rules.cpp  build_rules.h  build_system.cpp  build_system.h  build_tool.cpp  build_tool.h  cmd_process.cpp  cmd_process.h  common.h  compiler.cpp  compiler.h  compiler_visualstudio.cpp  compiler_windows.cpp  file_inspector.cpp  file_inspector.h  file_observer.cpp  file_observer.h  file_tool.cpp  file_tool.h  hotfix.cpp  hotfix.h  macro.h  module_interface.cpp  module_interface.h  object.cpp  object.h  object_mgr.cpp  object_mgr.h  rule_parser.h  rules_parser.h  serializer.cpp  serializer.h  system.cpp  system.h
src/hotfix/compiles/: CMakeLists.txt  llvm.cpp  msvc.cpp
src/hotfix/test/: demo.cpp  (+6 more)
src/importers/: CMakeLists.txt  assimp_parser.cpp  assimp_parser.h  assimp_util.cpp  assimp_util.h
src/integrators/: CMakeLists.txt  pt.cpp
src/lights/: CMakeLists.txt  area.cpp  area_light.cpp  environment.cpp  point.cpp  projector.cpp  spot.cpp
src/lightsamplers/: uniform.cpp
src/loader/: CMakeLists.txt  descriptions.cpp  descriptions.h  parameter_set.cpp  parameter_set.h  scene_config.cpp  scene_config.h  scene_desc.cpp  scene_desc.h  scene_parser.cpp  scene_parser.h  shape.h
src/loaders/: CMakeLists.txt
src/materials/: CMakeLists.txt  disney.cpp  glass.cpp  lambert.cpp  matte.cpp  metal.cpp  mirror.cpp  null.cpp  substrate.cpp  subsurface.cpp
src/math/: CMakeLists.txt  box.h  complex.h  constants.h  empty.cpp  geometry.h  interval.h  optics.h  quaternion.h  sampling.h  transform.h  util.h  warp.h
src/mediums/: homogeneous.cpp
src/pipelines/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/pyexporter/: CMakeLists.txt  vsapi.cpp  vsapi.h
src/pylibs/: test.py
src/python/: CMakeLists.txt  ast_parser.py  oc_type.py  test.py  vsapi.cpp  vsapi.h
src/render_core/: CMakeLists.txt
src/render_graph/: CMakeLists.txt  graph.cpp  graph.h  graph_compiler.cpp  graph_compiler.h  pass.cpp  pass.h  render_graph.cpp  render_graph_compiler.cpp  render_graph_compiler.h  resource.cpp  resource.h
src/samplers/: independent.cpp
src/scripts/: after_build_pyd.py  copy_pyd.py
src/sdk/: CMakeLists.txt  json.hpp  vision.cpp  vision.h
src/sensors/: CMakeLists.txt  thin_lens.cpp
src/shapes/: CMakeLists.txt  cube.cpp  model.cpp  quad.cpp  sphere.cpp
src/tests/: CMakeLists.txt  test_bxdf.cpp  test_desc.cpp  test_hotfix.cpp  test_ies.cpp  test_playground.cpp  test_render_graph.cpp  test_sdk.cpp  test_spawn_ray.cpp  test_warper2d.cpp
src/textures/: constant.cpp  image.cpp
src/tools/: tungsten2vision.py
src/visualize/: CMakeLists.txt  visualizer.cpp  visualizer.h
src/warpers/: CMakeLists.txt  alias.cpp  alias.h  alias2d.cpp  alias_table.cpp
(+617 files in other folders)
