add_library(vision-filter INTERFACE)
vision_add_plugin(box CATEGORY filter SOURCES box.cpp)
vision_add_plugin(triangle CATEGORY filter SOURCES triangle.cpp)
vision_add_plugin(gaussian CATEGORY filter SOURCES gaussian.cpp)
vision_add_plugin(sinc CATEGORY filter SOURCES sinc.cpp)
vision_add_plugin(mitchell CATEGORY filter SOURCES mitchell.cpp)
