add_library(vision-light INTERFACE)
vision_add_plugin(area CATEGORY light SOURCES area.cpp)
vision_add_plugin(point CATEGORY light SOURCES point.cpp)
vision_add_plugin(spot CATEGORY light SOURCES spot.cpp)
vision_add_plugin(projector CATEGORY light SOURCES projector.cpp)
vision_add_plugin(environment CATEGORY light SOURCES environment.cpp)