add_library(vision-light INTERFACE)
vision_add_plugin(area CATEGORY light SOURCES area.cpp)
vision_add_plugin(point CATEGORY light SOURCES point.cpp)
vision_add_plugin(spot CATEGORY light SOURCES spot.cpp)
vision_add_plugin(projector CATEGORY light SOURCES projector.cpp)
vision_add_plugin(directional CATEGORY light SOURCES environments/directional.cpp)
vision_add_plugin(spherical CATEGORY light SOURCES environments/spherical.cpp)
vision_add_plugin(mix CATEGORY light SOURCES environments/mix.cpp)
