add_library(vision-material INTERFACE)
vision_add_plugin(matte CATEGORY material SOURCES matte.cpp)
vision_add_plugin(black_body CATEGORY material SOURCES black_body.cpp)
vision_add_plugin(glass CATEGORY material SOURCES glass.cpp)
vision_add_plugin(mirror CATEGORY material SOURCES mirror.cpp)
vision_add_plugin(metal CATEGORY material SOURCES metal.cpp)
vision_add_plugin(substrate CATEGORY material SOURCES substrate.cpp)
vision_add_plugin(disney CATEGORY material SOURCES disney.cpp)
vision_add_plugin(subsurface CATEGORY material SOURCES subsurface.cpp)
vision_add_plugin(mix CATEGORY material SOURCES mix.cpp)
vision_add_plugin(add CATEGORY material SOURCES add.cpp)
vision_add_plugin(pbr CATEGORY material SOURCES pbr.cpp)
vision_add_plugin(principled CATEGORY material SOURCES principled/principled.cpp principled/ltc_sheen.cpp)
vision_add_plugin(multi_layered CATEGORY material SOURCES multi_layered.cpp)
